--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -1,27 +1,37 @@
 server {
-    listen 80;
-    index index.php;
-    server_name localhost;
-    root /var/www/images_server;
-    location / {
-        try_files $uri /index.php$is_args$args;
-    }
+    root /var/www/images_server/;
 
-location ~ ^/index\.php(/|$) {
-        # fastcgi_pass php82-electric-ru:9000;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
-        # fastcgi_buffer_size 128k;
-        # fastcgi_buffers 4 256k;
-        # fastcgi_busy_buffers_size 256k;
-        internal;
-    }
-location ~ \.php$ {
-        return 404;
-    }
+	  # error_page 403 404 405 415 500 502 503 504 /nophoto/nophoto.jpg;
 
-error_log /var/log/nginx/project_error.log;
-    access_log /var/log/nginx/project_access.log;
+	location ~ .*(?<extension>jpg|jpeg|png|gif)$ {
+	  error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.$extension;
+		access_log off;
+
+		limit_except GET {
+			deny all;
+		}
+
+    location ~ ^/images/.+$ {
+		  expires max;
+      set $filename $1;
+		  try_files $filename @proxy_local;
+	  }
+	}
+
+	location @proxy_local {
+		proxy_temp_path "temp";
+
+		proxy_store	$1;
+		proxy_store_access user:rw group:rw all:r;
+
+		proxy_intercept_errors on;
+
+		proxy_method			GET;
+		proxy_pass_request_body		off;
+		proxy_pass_request_headers	off;
+
+    error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.jpg;
+		# proxy_pass http://0.0.0.0:8085;
+	}
+
 }
