--- a/config/nginx/external/default.conf
+++ b/config/nginx/external/default.conf
@@ -1,5 +1,5 @@
 server {
-    root /var/www/images_server/;
+    root /var/www/images_server;
 
 	  # error_page 403 404 405 415 500 502 503 504 /nophoto/nophoto.jpg;
 
@@ -19,7 +19,7 @@ server {
 	}
 
 	location @proxy_local {
-		proxy_temp_path "temp";
+		proxy_temp_path "/var/www/images_server/temp";
 
 		proxy_store	$1;
 		proxy_store_access user:rw group:rw all:r;
@@ -30,8 +30,8 @@ server {
 		proxy_pass_request_body		off;
 		proxy_pass_request_headers	off;
 
-    error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.jpg;
-		# proxy_pass http://0.0.0.0:8085;
+		proxy_pass http://inner_nginx_img_server:8445;
+    # error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.$extension;
 	}
 
 }
