--- a/config/nginx/external/default.conf
+++ b/config/nginx/external/default.conf
@@ -1,25 +1,22 @@
 server {
     root /var/www/images_server;
 
-	  # error_page 403 404 405 415 500 502 503 504 /nophoto/nophoto.jpg;
+    location ~ ^(/images/small|full|large)/.*\.(?<extension>jpg|jpeg|png|gif)$ {
 
-	location ~ .*(?<extension>jpg|jpeg|png|gif)$ {
-	  error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.$extension;
-		access_log off;
+        # error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.$extension;
+		# access_log off;
 
 		limit_except GET {
 			deny all;
 		}
 
-    location ~ ^/images/.+$ {
-		  expires max;
-      set $filename $1;
-		  try_files $filename @proxy_local;
+		expires max;
+        set $filename $1;
+		try_files $filename @proxy_local;
 	  }
-	}
 
 	location @proxy_local {
-		proxy_temp_path "/var/www/images_server/temp";
+		proxy_temp_path /var/www/images_server/temp;
 
 		proxy_store	$1;
 		proxy_store_access user:rw group:rw all:r;
@@ -30,8 +27,8 @@ server {
 		proxy_pass_request_body		off;
 		proxy_pass_request_headers	off;
 
-		proxy_pass http://inner_nginx_img_server:8445;
-    # error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.$extension;
+		# proxy_pass http://inner_nginx_img_server:8445;
+        error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.jpg;
 	}
 
 }
