--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,11 @@ services:
   external_nginx:
     image: nginx:stable-alpine
     container_name: external_nginx_img_server
+    build:
+      context: .
+      args:
+        - EXTERNAL_PORT = ${EXTERNAL_PORT}
+        - INNER_PORT = ${INNER_PORT}
     ports:
       - ${EXTERNAL_PORT}:80
     volumes:
@@ -11,7 +16,7 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     env_file:
-      - ./.env
+      - .env
 
   inner_nginx:
     image: nginx:stable-alpine
