worker configuration inner nginx

--- a/config/nginx/external/default.conf
+++ b/config/nginx/external/default.conf
@@ -24,8 +24,8 @@ server {
 		proxy_pass_request_body		off;
 		proxy_pass_request_headers	off;
 
-		# proxy_pass http://inner_nginx_img_server:8445;
-        error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.jpg;
+		proxy_pass http://inner_nginx_img_server:8445;
+    # error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.jpg;
 	}
 
 }
