--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,15 @@ services:
       - .env
 
   inner_nginx:
-    image: nginx:stable-alpine
     container_name: inner_nginx_img_server
+    build:
+      context: ./
+      dockerfile: Dockerfile
     ports:
       - ${INNER_PORT}:80
     volumes:
       - ./app:/var/www/images_server
-      - ./config/nginx/inner/default.conf:/etc/nginx/conf.d/default.conf
+      - ./config/nginx/inner/nginx.conf:/etc/nginx/nginx.conf
       - ./logs/nginx:/var/log/nginx
     env_file:
       - ./.env
