fix inner config nginx

--- a/config/nginx/external/default.conf
+++ b/config/nginx/external/default.conf
@@ -1,14 +1,14 @@
 server {
     root /var/www/images_server;
 
-    location ~ ^(/images/small|full|large)/.*\.(?<extension>jpg|jpeg|png|gif)$ {
+    location ~ ^/images/(small|full|large)/.*\.(?<extension>jpg|jpeg|png|gif)$ {
 
 		limit_except GET {
 			deny all;
 		}
 
 		expires max;
-        set $filename $1;
+    set $filename $1;
 		try_files $filename @proxy_local;
 	  }
 
