--- a/config/nginx/inner/nginx.conf
+++ b/config/nginx/inner/nginx.conf
@@ -1,75 +1,18 @@
-load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
+# load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
 events {}
 http {
-proxy_cache_path
-    /var/www/images_server
-    levels=1:2
-    keys_zone=remoteimages:10m
-    inactive=60m
-    max_size=1G;
+
+upstream toledo24 {
+    server img.toledo24.pro;
+}
 
 server {
     listen 8445;
     root /var/www/images_server;
 
-    image_filter_jpeg_quality     80;
-    image_filter_buffer           10M;
-    image_filter_interlace        on;
-
-  location ~ ^(/images/small|full|large)/.*\.(?<extension>jpg|jpeg|png|gif)$ {
-    proxy_cache remoteimages;
-    proxy_cache_key $proxy_host$uri;
-
-    proxy_cache_min_uses          1;
-    proxy_cache_lock              on;
-
-    proxy_cache_valid    any      1m;
-    proxy_cache_valid             400 404 408 415 500 502 503 504     1h;
-
-    proxy_cache_use_stale         error timeout invalid_header updating http_500 http_502 http_503 http_504;
-
-    proxy_connect_timeout         5s;
-    proxy_read_timeout            5s;
-    proxy_send_timeout            5s;
-
-    proxy_method                  GET;
-    proxy_pass_request_body       off;
-    proxy_pass_request_headers    off;
-
-    set $width  "-";
-    set $height "-";
-
-    location ~* ^(.+/full)/.*\.(?<extension>jpg|jpeg|png|gif)$ {
-      proxy_pass "http://img.toledo24.pro/${extension}";
-
-      set $width  "-";
-      set $height "-";
-    }
-
-    image_filter resize $width $height;
-
+  location ~ ^/images/(small|full|large)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
+    proxy_pass https://toledo24/$extension;
   }
-
-  error_page 481 =200 @local_large;
-    error_page 482 =200 @local_medium;
-    error_page 483 =200 @local_small;
-
-    location @local_large {
-        try_files "/images/full/${extension}" =404;
-
-        image_filter resize 625 -;
-    }
-
-    location @local_medium {
-        try_files "/images/large/${extension}" "/images/full/${extension}" =404;
-
-        image_filter resize 380 -;
-    }
-
-    location @local_small {
-        try_files "/images/medium/${extension}" "/images/large/${extension}" "/images/full/${extension}" =404;
-
-        image_filter resize - 100;
-    }
 }
+
 }
