add php-fpm in docker compose and setting php

--- a/config/nginx/external/default.conf
+++ b/config/nginx/external/default.conf
@@ -1,7 +1,11 @@
+upstream backend {
+    server inner_nginx_img_server:80;
+}
+
 server {
     root /var/www/images_server;
 
-    location ~ ^/images/(small|full|large)/.*\.(?<extension>jpg|jpeg|png|gif)$ {
+    location ~ ^/images/(small|full|large)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
 
 		limit_except GET {
 			deny all;
@@ -24,7 +28,7 @@ server {
 		proxy_pass_request_body		off;
 		proxy_pass_request_headers	off;
 
-		proxy_pass http://inner_nginx_img_server:8445;
+		proxy_pass http://backend/images/small/$extension;
     # error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.jpg;
 	}
 
