--- a/config/nginx/inner/nginx.conf
+++ b/config/nginx/inner/nginx.conf
@@ -1,18 +1,47 @@
 # load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
+
 events {}
 http {
 
-upstream toledo24 {
-    server img.toledo24.pro;
-}
-
 server {
-    listen 8445;
     root /var/www/images_server;
 
-  location ~ ^/images/(small|full|large)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
-    proxy_pass https://toledo24/$extension;
-  }
+    location ~ ^/images/(small|full|large)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
+        rewrite ^/(.*)$ /index.php?img=$extension;
+    }
+
+    location ~ \.php$ {
+        fastcgi_pass php82_img_server:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_read_timeout 300;
+        fastcgi_send_timeout 300;
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+    }
+
+  # location ~ ^/images/(small|full|large)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
+
+  #       proxy_method                  GET;
+  #       proxy_pass_request_body       off;
+  #       proxy_pass_request_headers    off;
+  #       proxy_set_header Host $host;
+
+  #       fastcgi_pass php82_img_server:9000;
+  #       fastcgi_index index.php;
+  #       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+  #       include fastcgi_params;
+  #       fastcgi_read_timeout 300;
+  #       fastcgi_send_timeout 300;
+  #       fastcgi_buffer_size 128k;
+  #       fastcgi_buffers 4 256k;
+
+  #       set $width  "-";
+  #       set $height "-";
+
+  #       image_filter resize $width $height;
+  # }
 }
 
 }
