add working config nginx

--- a/config/nginx/external/default.conf
+++ b/config/nginx/external/default.conf
@@ -5,7 +5,7 @@ upstream backend {
 server {
     root /var/www/images_server;
 
-    location ~ ^/images/(small|full|large)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
+    location ~ ^/images/(?<folder>small|full|large)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
 
 		limit_except GET {
 			deny all;
@@ -13,23 +13,22 @@ server {
 
 		expires max;
     set $filename $1;
-		try_files $filename @proxy_local;
+		try_files /images/$folder/$extension @proxy_local;
 	  }
 
 	location @proxy_local {
 		proxy_temp_path /var/www/images_server/temp;
 
-		proxy_store	$1;
-		proxy_store_access user:rw group:rw all:r;
+		# proxy_store	$1;
+		# proxy_store_access user:rw group:rw all:r;
 
-		proxy_intercept_errors on;
+		# proxy_intercept_errors on;
 
 		proxy_method			GET;
 		proxy_pass_request_body		off;
 		proxy_pass_request_headers	off;
 
 		proxy_pass http://backend/images/small/$extension;
-    # error_page 403 404 405 415 500 502 503 504 /no_photo/no_photo.jpg;
 	}
 
 }
