add prepair inner config from images resize

--- a/config/nginx/external/default.conf
+++ b/config/nginx/external/default.conf
@@ -5,24 +5,18 @@ upstream backend {
 server {
     root /var/www/images_server;
 
-    location ~ ^/images/(?<folder>small|full|large)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
+    location ~ ^/images/(?<folder_size>small|medium|large|full)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
 
 		limit_except GET {
 			deny all;
 		}
 
 		expires max;
-    set $filename $1;
-		try_files /images/$folder/$extension @proxy_local;
+		try_files /images/$folder_size/$extension @proxy_local;
 	  }
 
 	location @proxy_local {
 		proxy_temp_path /var/www/images_server/temp;
-
-		# proxy_store	$1;
-		# proxy_store_access user:rw group:rw all:r;
-
-		# proxy_intercept_errors on;
 
 		proxy_method			GET;
 		proxy_pass_request_body		off;
