--- a/config/nginx/inner/nginx.conf
+++ b/config/nginx/inner/nginx.conf
@@ -1,4 +1,4 @@
-# load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
+load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
 
 events {}
 http {
@@ -6,8 +6,76 @@ http {
 server {
     root /var/www/images_server;
 
-    location ~ ^/images/(small|full|large)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
-        rewrite ^/(.*)$ /index.php?img=$extension;
+    image_filter_jpeg_quality     80;
+    image_filter_buffer           10M;
+    image_filter_interlace        on;
+
+    location ~ ^/images/(?<folder_size>small|medium|large|full)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
+
+      set $root_path /var/www/images_server;
+
+      proxy_method                  GET;
+      proxy_pass_request_body       off;
+      proxy_pass_request_headers    off;
+
+      # set $width  "-";
+      # set $height "-";
+
+      rewrite ^/(.*)$ /index.php?img=$extension;
+
+      # location ~* ^/images/full/$extension {
+      #       rewrite ^/(.*)$ /index.php?img=$extension;
+      #       # proxy_pass $root_path/images/full/$extension;
+
+      #       # set $width  "-";
+      #       # set $height "-";
+      # }
+
+      # location ~* ^/images/large/$extension {
+      #       if (-f $root_path/images/full/$extension) {
+      #           return 481;
+      #       }
+
+      #       # proxy_pass "http://images.service.com${request_1}large${request_2}";
+
+      #       set $width  625;
+      #       set $height "-";
+      #   }
+
+      #   location ~* ^/images/medium/$extension {
+      #       if (-f $root_path/images/full/$extension) {
+      #           return 482;
+      #       }
+
+      #       if (-f $root_path/images/large/$extension) {
+      #           return 482;
+      #       }
+
+      #       # proxy_pass "http://images.service.com${request_1}medium${request_2}";
+
+      #       set $width  380;
+      #       set $height "-";
+      #   }
+
+      #   location ~* ^/images/small/$extension {
+      #       if (-f $root_path/images/full/$extension) {
+      #           return 483;
+      #       }
+
+      #       if (-f $root_path/images/large/$extension) {
+      #           return 483;
+      #       }
+
+      #       if (-f $root_path/images/medium/$extension) {
+      #           return 483;
+      #       }
+
+      #       proxy_pass $root_path/images/small/$extension;
+
+      #       set $width  "-";
+      #       set $height 100;
+      #   }
+
     }
 
     location ~ \.php$ {
@@ -19,29 +87,31 @@ server {
         fastcgi_send_timeout 300;
         fastcgi_buffer_size 128k;
         fastcgi_buffers 4 256k;
-    }
+      }
 
-  # location ~ ^/images/(small|full|large)/(?<extension>.*\.(jpg|jpeg|png|gif))$ {
+      # image_filter resize $width $height;
 
-  #       proxy_method                  GET;
-  #       proxy_pass_request_body       off;
-  #       proxy_pass_request_headers    off;
-  #       proxy_set_header Host $host;
+    # error_page 481 =200 @local_large;
+    # error_page 482 =200 @local_medium;
+    # error_page 483 =200 @local_small;
 
-  #       fastcgi_pass php82_img_server:9000;
-  #       fastcgi_index index.php;
-  #       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-  #       include fastcgi_params;
-  #       fastcgi_read_timeout 300;
-  #       fastcgi_send_timeout 300;
-  #       fastcgi_buffer_size 128k;
-  #       fastcgi_buffers 4 256k;
+    # location @local_large {
+    #     try_files /images/$folder_size/$extension =404;
 
-  #       set $width  "-";
-  #       set $height "-";
+    #     image_filter resize 625 -;
+    # }
 
-  #       image_filter resize $width $height;
-  # }
+    # location @local_medium {
+    #     try_files /images/$folder_size/$extension /images/full/$extension =404;
+
+    #     image_filter resize 380 -;
+    # }
+
+    # location @local_small {
+    #     try_files /images/medium/$extension /images/large/$extension /images/full/$extension =404;
+
+    #     image_filter resize - 100;
+    # }
 }
 
 }
